feat: 提示词 DB 化 — PromptManager 改为 DB 加载 + 自动 seed + REST 管理 API